--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Clase de Git y Github</h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi exercitationem esse magnam optio ad maxime nostrum quam quaerat reiciendis, ea a beatae, sapiente vitae voluptatem? Vitae aspernatur saepe cum placeat!</p>
 </body>
 </html>
